--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -15,4 +15,5 @@ tr:nth-child(even) { background-color: #dddddd; }
 
 </br></br> <b> <a href="{{ url_for('add_note') }}">Add a New Note</a> </b>
 </br></br> <b> <a href="{{ url_for('info') }}">Host Information</a> </b>
+</br></br> <b> <a href="{{ url_for('signout') }}">Sign Out</a> </b>
 {% endblock %}
